tests/baselines/reference/jsFileCompilationOptionalParameter.errors.txt
error TS5055: Cannot write file 'tests/cases/compiler/a.js' which is one of the input files.
tests/cases/compiler/a.js(1,13): error TS8009: '?' can only be used in a .ts file.


!!! error TS5055: Cannot write file 'tests/cases/compiler/a.js' which is one of the input files.
==== tests/cases/compiler/a.js (1 errors) ====
    function F(p?) { }
                ~
!!! error TS8009: '?' can only be used in a .ts file.